Improve profiling script defaults and JVM options (#305)